name:                 tests
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Yiğitcan UÇUM
maintainer:           yigitcan@hotmail.com.tr
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable tests
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        containers, base >= 4.7 && < 5
                        , random, mtl
  hs-source-dirs:       src
  default-language:     Haskell2010
